samples/_failures_safe/1761523042_5b5ba1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f6894858.c: In function ‘main’:
./samples/SAFE/__tmp_f6894858.c:157:5: error: expected declaration or statement at end of input
  157 |     }
      |     ^
